# Applied-Machine-Learning-for-business-Project

./: .gitignore  Chicago_Crime_ML_Analysis.ipynb  README.md  Seattle_Fire_911_ML_Analysis.ipynb  app.py  chicago_crime_ML_v2.ipynb  chicago_crime_ML_v4.ipynb  chicago_final.ipynb  nyc_final.ipynb  nyc_final_v2.ipynb  pyproject.toml  simulateur_crime_chicago.html
Surplus/: app.py
notebooks/: 01_chicago_crime_eda.ipynb  02_chicago_crime_predictions.ipynb  chicago_crime_ML_v3.ipynb
