[project]
name = "applied-machine-learning-for-business-project"
version = "0.1.0"
description = "Machine learning project for Chicago crime analysis and Streamlit simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.19.0",
    "joblib>=1.4.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "streamlit>=1.40.0",
    "streamlit-folium>=0.24.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[tool.uv]
package = false
